--- a/environment.yml
+++ b/environment.yml
@@ -3,46 +3,31 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - bzip2=1.0.6=h1de35cc_1002
   - ca-certificates=2018.11.29=ha4d7672_0
-  - certifi=2018.11.29=py37_1000
+  - certifi=2018.11.29=py27_1000
   - click=7.0=py_0
-  - cryptography=2.3.1=py37hdbc3d79_1000
+  - ecdsa=0.13=py_0
   - gitdb2=2.0.5=py_0
   - gitpython=2.1.11=py_0
-  - openssl=1.0.2p=h1de35cc_1002
-  - paramiko=2.4.2=py37_1000
+  - libcxx=7.0.0=h2d50403_2
+  - libffi=3.2.1=h0a44026_1005
+  - llvm-meta=7.0.0=0
+  - ncurses=6.1=h0a44026_1002
+  - openssl=1.1.1a=h1de35cc_1000
+  - paramiko=1.18.2=py27_0
+  - pip=19.0.1=py27_0
   - plumbum=1.6.7=py_0
-  - pyasn1=0.4.4=py_1
-  - pynacl=1.3.0=py37h1de35cc_1000
-  - python=3.7.1=h145921a_1000
+  - pycrypto=2.6.1=py27h1de35cc_1002
+  - readline=7.0=hcfe32e1_1001
   - semver=2.8.1=py_1
+  - setuptools=40.7.1=py27_0
   - smmap2=2.0.5=py_0
   - sphinx_rtd_theme=0.4.2=py_0
-  - asn1crypto=0.24.0=py37_0
-  - bcrypt=3.1.6=py37h1de35cc_0
-  - cffi=1.11.5=py37h6174b99_1
-  - chardet=3.0.4=py37_1
-  - idna=2.8=py37_0
-  - libcxx=4.0.1=hcfea43d_1
-  - libcxxabi=4.0.1=hcfea43d_1
-  - libedit=3.1.20181209=hb402a30_0
-  - libffi=3.2.1=h475c297_4
-  - ncurses=6.1=h0a44026_1
-  - pip=18.1=py37_0
-  - pycparser=2.19=py37_0
-  - pyopenssl=18.0.0=py37_0
-  - pysocks=1.6.8=py37_0
-  - readline=7.0=h1de35cc_5
-  - requests=2.21.0=py37_0
-  - setuptools=40.6.3=py37_0
-  - six=1.12.0=py37_0
-  - sqlite=3.26.0=ha441bb4_0
-  - tk=8.6.8=ha441bb4_0
-  - urllib3=1.24.1=py37_0
-  - wheel=0.32.3=py37_0
-  - xz=5.2.4=h1de35cc_4
-  - zlib=1.2.11=h1de35cc_3
+  - sqlite=3.26.0=h1765d9f_1000
+  - tk=8.6.9=ha441bb4_1000
+  - wheel=0.32.3=py27_0
+  - zlib=1.2.11=h1de35cc_1004
+  - python=2.7.15=h8f8e585_6
   - pip:
     - githubrelease
-prefix: /anaconda2/envs/esgf-build
+prefix: /Users/hill119/anaconda2/envs/esgf-build
