started adding unit tests

--- a/environment.yml
+++ b/environment.yml
@@ -30,4 +30,5 @@ dependencies:
   - python=2.7.15=h8f8e585_6
   - pip:
     - githubrelease
+    - pytest
 prefix: /Users/hill119/anaconda2/envs/esgf-build
