--- a/environment.yml
+++ b/environment.yml
@@ -3,21 +3,39 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - ca-certificates=2018.11.29=ha4d7672_0
-  - certifi=2018.11.29=py27_1000
+  - backports=1.0=py27_1
+  - ca-certificates=2019.1.23=0
+  - certifi=2019.3.9=py27_0
   - click=7.0=py_0
+  - configparser=3.7.3=py27_1
   - ecdsa=0.13=py_0
+  - entrypoints=0.3=py27_0
+  - enum34=1.1.6=py27_1
+  - expat=2.2.6=h0a44026_0
+  - flake8=3.7.7=py27_0
+  - functools32=3.2.3.2=py27_1
+  - git=2.20.1=pl526h6951d83_0
   - gitdb2=2.0.5=py_0
   - gitpython=2.1.11=py_0
-  - libcxx=7.0.0=h2d50403_2
+  - krb5=1.16.1=hddcf347_7
+  - libcurl=7.64.1=h051b688_0
+  - libcxx=7.0.0=h2d50403_1
+  - libedit=3.1.20181209=hb402a30_0
   - libffi=3.2.1=h0a44026_1005
+  - libiconv=1.15=hdd342a3_7
+  - libssh2=1.8.2=ha12b0ac_0
   - llvm-meta=7.0.0=0
+  - mccabe=0.6.1=py27_1
   - ncurses=6.1=h0a44026_1002
-  - openssl=1.1.1a=h1de35cc_1000
+  - openssl=1.1.1b=h1de35cc_1
   - paramiko=1.18.2=py27_0
+  - perl=5.26.2=h4e221da_0
   - pip=19.0.1=py27_0
   - plumbum=1.6.7=py_0
+  - pycodestyle=2.5.0=py27_0
   - pycrypto=2.6.1=py27h1de35cc_1002
+  - pyflakes=2.1.1=py27_0
+  - python=2.7.15=h8f8e585_6
   - readline=7.0=hcfe32e1_1001
   - semver=2.8.1=py_1
   - setuptools=40.7.1=py27_0
@@ -25,9 +43,25 @@ dependencies:
   - sphinx_rtd_theme=0.4.2=py_0
   - sqlite=3.26.0=h1765d9f_1000
   - tk=8.6.9=ha441bb4_1000
+  - typing=3.6.6=py27_0
   - wheel=0.32.3=py27_0
   - zlib=1.2.11=h1de35cc_1004
-  - python=2.7.15=h8f8e585_6
   - pip:
-      - githubrelease
-      - pytest
+    - atomicwrites==1.3.0
+    - attrs==19.1.0
+    - chardet==3.0.4
+    - funcsigs==1.0.2
+    - githubrelease==1.5.8
+    - idna==2.8
+    - linkheader==0.4.3
+    - more-itertools==5.0.0
+    - pathlib2==2.3.3
+    - pluggy==0.9.0
+    - py==1.8.0
+    - pytest==4.4.1
+    - requests==2.21.0
+    - scandir==1.10.0
+    - six==1.12.0
+    - urllib3==1.24.1
+prefix: /Users/hill119/anaconda2/envs/esgf-build
+
